--- a/sections/faq.liquid
+++ b/sections/faq.liquid
@@ -4,11 +4,18 @@
 
 <style>
   .faq {
-    padding: 60px 0;
+    padding: {{ section.settings.padding_top | times: 0.75 | round: 0 }}px 0 {{ section.settings.padding_bottom | times: 0.75 | round: 0 }}px;
     color: {{ section.settings.text_color }};
     width: 100%;
     max-width: 1440px;
     margin: 0 auto;
+    background-color: {{ section.settings.background_color }};
+  }
+  
+  @media screen and (min-width: 750px) {
+    .faq {
+      padding: {{ section.settings.padding_top }}px 0 {{ section.settings.padding_bottom }}px;
+    }
   }
   
   .faq__title {
@@ -29,10 +36,11 @@
   .faq__grid-item {
     width: 100%;
     padding: 0;
+    border-bottom: 1px solid {{ section.settings.border_color }};
   }
   
   .faq__item {
-    border-bottom: 1px solid {{ section.settings.border_color }};
+    width: 100%;
   }
   
   .faq__question-wrapper {
@@ -65,6 +73,7 @@
   .icon-plus, .icon-minus {
     position: absolute;
     transition: opacity 0.3s ease;
+    color: {{ section.settings.icon_color }};
   }
   
   .icon-minus {
@@ -131,6 +140,16 @@
       "default": "Frequently Asked Questions"
     },
     {
+      "type": "header",
+      "content": "Colors"
+    },
+    {
+      "type": "color",
+      "id": "background_color",
+      "label": "Background color",
+      "default": "#FFFFFF"
+    },
+    {
       "type": "color",
       "id": "text_color",
       "label": "Text color",
@@ -153,6 +172,36 @@
       "id": "border_color",
       "label": "Border color",
       "default": "#E0D4C8"
+    },
+    {
+      "type": "color",
+      "id": "icon_color",
+      "label": "Icon color",
+      "default": "#9E5048"
+    },
+    {
+      "type": "header",
+      "content": "Section Spacing"
+    },
+    {
+      "type": "range",
+      "id": "padding_top",
+      "min": 0,
+      "max": 100,
+      "step": 4,
+      "unit": "px",
+      "label": "Padding top",
+      "default": 60
+    },
+    {
+      "type": "range",
+      "id": "padding_bottom",
+      "min": 0,
+      "max": 100,
+      "step": 4,
+      "unit": "px",
+      "label": "Padding bottom",
+      "default": 60
     }
   ],
   "blocks": [
