--- a/sections/service-blocks.liquid
+++ b/sections/service-blocks.liquid
@@ -2,7 +2,14 @@
 
 <style>
 .service-blocks {
-  padding: var(--spacing-section) 0;
+  padding: {{ section.settings.padding_top | times: 0.75 | round: 0 }}px 0 {{ section.settings.padding_bottom | times: 0.75 | round: 0 }}px;
+  background-color: {{ section.settings.background_color }};
+}
+
+@media screen and (min-width: 750px) {
+  .service-blocks {
+    padding: {{ section.settings.padding_top }}px 0 {{ section.settings.padding_bottom }}px;
+  }
 }
 
 .service-blocks__container {
@@ -204,6 +211,12 @@
     },
     {
       "type": "color",
+      "id": "background_color",
+      "label": "Background color",
+      "default": "#FFFFFF"
+    },
+    {
+      "type": "color",
       "id": "border_color",
       "label": "Border color",
       "default": "#422f23"
@@ -237,6 +250,30 @@
       "id": "button_text_color",
       "label": "Button text color",
       "default": "#EEEBE6"
+    },
+    {
+      "type": "header",
+      "content": "Section Spacing"
+    },
+    {
+      "type": "range",
+      "id": "padding_top",
+      "min": 0,
+      "max": 100,
+      "step": 4,
+      "unit": "px",
+      "label": "Padding top",
+      "default": 60
+    },
+    {
+      "type": "range",
+      "id": "padding_bottom",
+      "min": 0,
+      "max": 100,
+      "step": 4,
+      "unit": "px",
+      "label": "Padding bottom",
+      "default": 60
     }
   ],
   "blocks": [
