--- a/sections/location.liquid
+++ b/sections/location.liquid
@@ -121,7 +121,7 @@
   }
 </style>
 
-<div class="location-section section-padding">
+<div class="location-section section-padding" {{ section.shopify_attributes }}>
   <div class="page-width">
     <div class="location-container">
       <div class="location-content">
