--- a/sections/testimonials.liquid
+++ b/sections/testimonials.liquid
@@ -163,7 +163,7 @@
 }
 </style>
 
-<div class="testimonials-section" id="Testimonials-{{ section.id }}" style="background-color: {{ section.settings.background_color }}; color: {{ section.settings.text_color }};">
+<div class="testimonials-section" id="Testimonials-{{ section.id }}" style="background-color: {{ section.settings.background_color }}; color: {{ section.settings.text_color }};" {{ section.shopify_attributes }}>
   <div class="page-width">
     <div class="testimonials-container">
       <div class="testimonials-header">
